Copy requirements.txt to alphaclient docker and run pip install

--- a/alphaclient/Dockerfile
+++ b/alphaclient/Dockerfile
@@ -11,7 +11,9 @@ RUN sed 's@session\s*required\s*pam_loginuid.so@session optional pam_loginuid.so
 ENV NOTVISIBLE "in users profile"
 RUN echo "export VISIBLE=now" >> /etc/profile
 
-RUN pip3 install tailer
+COPY requirements.txt /
+RUN pip3 install -r requirements.txt
+
 ADD alphaclient.py /
 COPY startup.sh /
 
