Expose alphaserver TCP port 5000 so alphaclient able to access

--- a/alphaserver/Dockerfile
+++ b/alphaserver/Dockerfile
@@ -2,4 +2,5 @@ FROM python:3.7-alpine
 
 ADD alphaserver.py /
 
-CMD [ "python", "./alphaserver.py" ]
+EXPOSE 5000
+CMD [ "python3", "./alphaserver.py" ]
